GRIDLY-6872 use fileType as string to avoid conflict json keyword in go sdk
