# api/openapi.yaml
@@ -373,6 +373,7 @@ paths:
               items:
                 $ref: '#/components/schemas/SetRecord'
               type: array
+        description: createRecords
         required: true
       responses:
         "200":
@@ -388,6 +389,7 @@ paths:
       summary: create
       tags:
       - record
+      x-codegen-request-body-name: createRecords
       x-content-type: application/json
       x-accepts: application/json
   /v1/views/{viewId}/merge:
@@ -470,7 +472,16 @@ paths:
         name: type
         required: false
         schema:
-          $ref: '#/components/schemas/FileType'
+          default: csv
+          enum:
+          - csv
+          - tsv
+          - xls
+          - xlsx
+          - json
+          - po
+          nullable: true
+          type: string
         style: form
       requestBody:
         content:
@@ -1400,7 +1411,16 @@ paths:
         name: type
         required: false
         schema:
-          $ref: '#/components/schemas/FileType'
+          default: csv
+          enum:
+          - csv
+          - tsv
+          - xls
+          - xlsx
+          - json
+          - po
+          nullable: true
+          type: string
         style: form
       responses:
         default:
@@ -1648,6 +1668,7 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/UpdateDatabase'
+        description: body
         required: true
       responses:
         "200":
@@ -1661,6 +1682,7 @@ paths:
       summary: update
       tags:
       - database
+      x-codegen-request-body-name: body
       x-content-type: application/json
       x-accepts: application/json
   /v1/projects:
@@ -1787,6 +1809,7 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/CreateDatabase'
+        description: body
         required: true
       responses:
         "200":
@@ -1800,6 +1823,7 @@ paths:
       summary: create
       tags:
       - database
+      x-codegen-request-body-name: body
       x-content-type: application/json
       x-accepts: application/json
   /v1/databases/{dbId}/duplicate:
@@ -1828,6 +1852,7 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/CreateDatabase'
+        description: body
         required: true
       responses:
         "200":
@@ -1841,6 +1866,7 @@ paths:
       summary: duplicate
       tags:
       - database
+      x-codegen-request-body-name: body
       x-content-type: application/json
       x-accepts: application/json
 components:
@@ -2308,22 +2334,6 @@ components:
           - running
           type: string
       type: object
-    FileType:
-      enum:
-      - csv
-      - tsv
-      - xls
-      - xlsx
-      - json
-      - po
-      type: string
-      x-enum-varnames:
-      - csv
-      - tsv
-      - xls
-      - xlsx
-      - json
-      - po
     UploadedFile:
       example:
         originalName: originalName
@@ -3875,6 +3885,7 @@ components:
       - name
       type: object
     CreateDatabase:
+      description: body
       example:
         name: name
         description: description
